# Cinder-Profiler

./: .gitignore  CMakeLists.txt  README.md  cinderblock.xml
cmake/: RvProfilerConfig.cmake.in
include/: Profiler.h
samples/: CMakeLists.txt
samples/MultithreadedTest/src/: MultithreadedTestApp.cpp
samples/MultithreadedTest/vc2013/: MultithreadedTest.sln  MultithreadedTest.vcxproj  MultithreadedTest.vcxproj.filters
samples/MultithreadedTest/xcode/MultithreadedTest.xcodeproj/: project.pbxproj
samples/ProfilerTest/assets/: noise.frag
samples/ProfilerTest/proj/cmake/: CMakeLists.txt
samples/ProfilerTest/src/: ProfilerTestApp.cpp
samples/ProfilerTest/vc2013/: ProfilerTest.sln  ProfilerTest.vcxproj  ProfilerTest.vcxproj.filters
samples/ProfilerTest/vc2015/: ProfilerTest.vcxproj  ProfilerTest.vcxproj.filters
samples/ProfilerTest/xcode/ProfilerTest.xcodeproj/: project.pbxproj
src/: CMakeLists.txt  Profiler.cpp  Profiler.h  ProfilerGui.h
